--- a/arch/arm/boot/dts/sun7i-a20-bananapi-r1.dts
+++ b/arch/arm/boot/dts/sun7i-a20-bananapi-r1.dts
@@ -1,7 +1,5 @@
 /*
- * Copyright 2014 Hans de Goede <hdegoede@redhat.com>
- *
- * Hans de Goede <hdegoede@redhat.com>
+ * Copyright 2015 Hans de Goede <hdegoede@redhat.com>
  *
  * This file is dual-licensed: you can use it either under the terms
  * of the GPL or the X11 license, at your option. Note that this dual
@@ -51,13 +49,14 @@
 #include <dt-bindings/pinctrl/sun4i-a10.h>
 
 / {
-	model = "Banana Pi BPI-M1";
-	compatible = "sinovoip,bpi-m1", "allwinner,sun7i-a20";
+	model = "Banana Pi BPI-R1";
+	compatible = "sinovoip,bpi-r1", "allwinner,sun7i-a20";
 
 	aliases {
 		serial0 = &uart0;
-		serial1 = &uart3;
-		serial2 = &uart7;
+		serial1 = &uart2;
+		serial2 = &uart3;
+		serial3 = &uart7;
 	};
 
 	chosen {
@@ -98,6 +97,14 @@
 };
 
 &ehci1 {
+	status = "okay";
+};
+
+&ohci0 {
+	status = "okay";
+};
+
+&ohci1 {
 	status = "okay";
 };
 
@@ -152,14 +159,6 @@
 	status = "okay";
 };
 
-&ohci0 {
-	status = "okay";
-};
-
-&ohci1 {
-	status = "okay";
-};
-
 &pio {
 	mmc0_cd_pin_bananapi: mmc0_cd_pin@0 {
 		allwinner,pins = "PH10";
@@ -202,6 +201,12 @@
 &uart0 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&uart0_pins_a>;
+	status = "okay";
+};
+
+&uart2 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&uart2_pins_a>;
 	status = "okay";
 };
 
