dts: introduce a new dts for 2nd linux inmate
introduce a new dts for 2nd linux inmate, enable
low level debug function and early printk in
menuconfig kernel hacking, set physical address of
debug UART to 0x01c29c00 and virtual address to
0xf1c29c00, which is UART7. so UART7 will print
the boot log of the 2nd linux.

Signed-off-by: flynn <francisco_flynn@foxmail.com>

--- a/arch/arm/boot/dts/sun7i-a20-bananapi-m1-plus.dts
+++ b/arch/arm/boot/dts/sun7i-a20-bananapi-m1-plus.dts
@@ -62,9 +62,9 @@
 		#size-cells = <1>;
 		ranges;
 
-		inmate_reserved: inmate@0x78000000{
+		inmate_reserved: inmate@0x60000000{
 			no-map;
-			reg = <0x78000000 0x3ef0000>;
+			reg = <0x60000000 0x1bef0000>;
 		};
 	};
 
