--- a/arch/arm/boot/dts/sun7i-a20-bananapi-m1-plus-inmate.dts
+++ b/arch/arm/boot/dts/sun7i-a20-bananapi-m1-plus-inmate.dts
@@ -58,24 +58,10 @@
 		stdout-path = "serial0:115200n8";
 	};
 
-	leds {
-		compatible = "gpio-leds";
-		pinctrl-names = "default";
-		pinctrl-0 = <&led_pins_bananapi>;
-
-		red {
-			label = "bananapi:red:usr";
-			gpios = <&pio 7 25 GPIO_ACTIVE_HIGH>;
-			linux,default-trigger = "default-on";
-		};
-
-		green {
-			label = "bananapi:green:usr";
-			gpios = <&pio 7 24 GPIO_ACTIVE_HIGH>;
-			linux,default-trigger = "heartbeat";
-
-		};
+	memory@0 {
+		reg = <0x60000000 0x1bef0000>;
 	};
+
 
 	reg_gmac_3v3: gmac-3v3 {
 		compatible = "regulator-fixed";
@@ -260,23 +246,9 @@
 	status = "okay";
 };
 
-&uart0 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&uart0_pins_a>;
-	status = "okay";
-};
-
-&uart2 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&uart2_pins_a>;
-	status = "okay";
-};
-
-&uart3 {
-	pinctrl-names = "default";
-	pinctrl-0 = <&uart3_pins_b>;
-	status = "okay";
-};
+/delete-node/&uart0;
+/delete-node/&uart2;
+/delete-node/&uart3;
 
 &uart7 {
 	pinctrl-names = "default";
