--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -622,6 +622,7 @@ dtb-$(CONFIG_MACH_SUN7I) += \
 	sun7i-a20-orangepi-mini.dtb \
     sun7i-a20-bananapi-m1-plus.dtb \
     sun7i-a20-bananapi-m1-plus-inmate.dtb \
+    sun7i-a20-bananapi-m1-plus-xen.dtb \
     inmate-bananapi.dtb \
 	sun7i-a20-pcduino3.dtb \
 	sun7i-a20-pcduino3-nano.dtb \
